tests/security/shapeSources/output.txt
ERROR: TaintedData - input.hack:12:10 - Detected leak of user secret